--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<htm lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,14 +8,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Lora&family=Mulish&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Users:</h1>
+      <h1 class="heading">Users:</h1>
+      <div class="cards">
+       
+      </div>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script src="./main.js"></script>
   </body>
-</html>
+</htm
